envoy.yaml
static_resources:
  listeners:
  - name: grpc_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http2_protocol_options: {}
          route_config:
            name: local_route
            virtual_hosts:
            - name: grpc_services
              domains: ["*"]
              routes:
              # Маршрут для reflection API
              - match:
                  prefix: "/grpc.reflection.v1.ServerReflection/"
                route:
                  cluster: cluster_sso
              # Фактические сервисы sso
              - match:
                  prefix: "/sso.v1.Auth/"
                route:
                  cluster: cluster_sso
              # Все сервисы journal (общий префикс)
              - match:
                  prefix: "/journal.v1."
                route:
                  cluster: cluster_journal
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: cluster_journal
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: cluster_journal
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: journal-service
                port_value: 4043

  - name: cluster_sso
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: cluster_sso
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sso-service
                port_value: 4042
